--- a/_static/style.css
+++ b/_static/style.css
@@ -1,5 +1,29 @@
-.image-small {
+img.tops-image-small {
     width: 100%;
-    max-width: 350px;
+    max-width: 300px;
     height: auto;
+}
+
+img.tops-image-medium {
+    width: 100%;
+    max-width: 768px;
+    height: auto;
+}
+
+img.tops-image-large {
+    width: 100%;
+    max-width: 1025px;
+    height: auto;
+}
+
+img.tops-image-full {
+    width: 100%;
+    height: auto;
+}
+
+img.tops-image-banner {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    object-position: center;
 }
