add a slight bottom margin to images in article view

--- a/_static/style.css
+++ b/_static/style.css
@@ -1,3 +1,7 @@
+.bd-article-container .bd-article img {
+    margin-bottom: 12px;
+}
+
 img.tops-image-small {
     width: 100%;
     max-width: 250px;
