--- a/_static/style.css
+++ b/_static/style.css
@@ -26,6 +26,27 @@ img.tops-image-large {
 }
 
 .bd-article table:not(.table) {
+    --bs-table-color-type: initial;
+    --bs-table-bg-type: initial;
+    --bs-table-color-state: initial;
+    --bs-table-bg-state: initial;
+    --bs-table-color: var(--bs-emphasis-color);
+    --bs-table-bg: var(--bs-body-bg);
+    --bs-table-border-color: var(--bs-border-color);
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: var(--bs-emphasis-color);
+    --bs-table-striped-bg: rgba(var(--bs-emphasis-color-rgb), 0.05);
+    --bs-table-active-color: var(--bs-emphasis-color);
+    --bs-table-active-bg: rgba(var(--bs-emphasis-color-rgb), 0.1);
+    --bs-table-hover-color: var(--bs-emphasis-color);
+    --bs-table-hover-bg: rgba(var(--bs-emphasis-color-rgb), 0.075);
+    border-color: var(--bs-table-border-color);
+    margin-bottom: 1rem;
+    vertical-align: top;
+    width: 100%;
+}
+
+.bd-article table:not(.table) {
     --bs-table-bg: transparent;
     --bs-table-color: var(--pst-color-text-base);
     border: 1px solid var(--pst-color-table-outer-border);
