--- a/_static/style.css
+++ b/_static/style.css
@@ -67,9 +67,12 @@ img.tops-image-large {
     border-bottom: 2px solid var(--pst-color-primary);
 }
 
+.bd-article table:not(.table) tbody tr:last-of-type {
+    border: none;
+}
+
 .bd-article table:not(.table) tbody tr:last-of-type td {
     border: none;
-    outline: none;
 }
 
 .bd-article table:not(.table) tbody tr:nth-child(odd) {
